--- a/pedido.html
+++ b/pedido.html
@@ -43,7 +43,7 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.3.2 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.3.3 — pedido</div>
 <div class="container">
   <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v1.7</span></h1>
 
@@ -199,13 +199,15 @@ function showSuggestions(list) {
   const box = document.getElementById('suggestions');
   if (!list.length) { hideSuggestions(); return; }
   box.style.display = 'block';
-  box.innerHTML = list.map((c, i) => `
+  box.innerHTML = list.map((c, i) => {
+    const addrLabel = c._extra_obs ? `<span style="background:#ede9fe;color:#6366f1;font-size:10px;font-weight:700;padding:1px 6px;border-radius:8px;margin-right:4px">${c._extra_obs}</span>` : '';
+    return `
     <div class="suggestion-item" onclick="selectCustomer(${i})">
       <strong>${c.name || c.customer_name}</strong>
       <span style="margin-left:8px;color:#f97316">${c.phone_digits || ''}</span><br>
-      <small>${c.address_line || ''} ${c.bairro ? '— ' + c.bairro : ''}</small>
-    </div>
-  `).join('');
+      <small>${addrLabel}${c.address_line || ''} ${c.bairro ? '— ' + c.bairro : ''}</small>
+    </div>`;
+  }).join('');
   box._data = list;
 }
 
