--- a/pedido.html
+++ b/pedido.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>Novo Pedido — MoskoGás v2.3.8</title>
+<title>Novo Pedido — MoskoGás v2.3.9</title>
 <style>
   * { box-sizing: border-box; margin: 0; padding: 0; }
   body { font-family: system-ui, sans-serif; background: #f1f5f9; min-height: 100vh; }
@@ -43,9 +43,9 @@
 </head>
 <body>
 <div id="nav-placeholder"></div>
-<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.3.8 — pedido</div>
+<div style="font-size:10px;color:#94a3b8;text-align:right;padding:2px 12px 0">v2.3.9 — pedido</div>
 <div class="container">
-  <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.3.8</span></h1>
+  <h1>➕ Novo Pedido <span style="font-size:12px;color:#94a3b8;font-weight:400">v2.3.9</span></h1>
 
   <!-- BUSCA CLIENTE -->
   <div class="card">
@@ -276,6 +276,24 @@ async function selectCustomer(i) {
 
 let currentPhone = '';
 let allAddresses = [];
+
+// ── Banner de reautorização Bling ─────────────────────────────
+function checkBlingReauth(err) {
+  const msg = (err?.message || String(err) || '').toLowerCase();
+  if (msg.includes('reauth') || msg.includes('invalid_token') || msg.includes('bling 401')) {
+    let banner = document.getElementById('reauth-banner');
+    if (!banner) {
+      banner = document.createElement('div');
+      banner.id = 'reauth-banner';
+      banner.style.cssText = 'position:fixed;top:0;left:0;right:0;z-index:99999;background:#dc2626;color:#fff;padding:10px 16px;display:flex;align-items:center;justify-content:space-between;font-size:13px;font-weight:600;box-shadow:0 2px 8px rgba(0,0,0,0.3)';
+      banner.innerHTML = '<span>⚠️ Token do Bling expirado — algumas funções não funcionarão até reautorizar.</span>'
+        + '<a href="config.html" style="background:#fff;color:#dc2626;padding:4px 14px;border-radius:8px;font-weight:700;text-decoration:none;margin-left:12px;white-space:nowrap">🔑 Reautorizar agora</a>';
+      document.body.prepend(banner);
+    }
+    return true;
+  }
+  return false;
+}
 
 // ── Carrega endereços e atualiza badge ───────────────────────
 async function loadSavedAddresses(phone) {
@@ -662,7 +680,11 @@ async function searchProducts(q) {
       }).join('');
     } catch(e) {
       console.error('Erro busca produto:', e);
-      box.innerHTML = `<div style="padding:10px 14px;color:#dc2626;font-size:12px">❌ Erro: ${e.message}</div>`;
+      if (checkBlingReauth(e)) {
+        box.innerHTML = `<div style="padding:10px 14px;color:#dc2626;font-size:12px">⚠️ Token Bling expirado — <a href="config.html" style="color:#dc2626;font-weight:700">clique aqui para reautorizar</a></div>`;
+      } else {
+        box.innerHTML = `<div style="padding:10px 14px;color:#dc2626;font-size:12px">❌ Erro: ${e.message}</div>`;
+      }
       box._data = [];
     }
   }, 300);
